Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5749

second phase warmup is not loading any keys if access.log or access.log.old exists but has no keys in side (due to inactive of the server)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.0-beta
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      no values are being loaded after warmup if the access.log and access.log.old files are empty.

      if those files are empty due to inactivity of the server, than at least random values should be loaded until low watermark is reached.

      Attachments

        For Gerrit Dashboard: MB-5749
        # Subject Branch Project Status CR V

        Activity

          People

            jin Jin Lim (Inactive)
            sharon Sharon Barr (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty