MB-5749 transition to random data loading if access log is empty

If access logs are found to be empty, warmup should transition to
random data loading instead of completing warmup process entirely.

Change-Id: If930d72d077fb8d5aaa7b04c6bb041e7a0302183
Reviewed-on: http://review.couchbase.org/17807
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Jin Lim <jin@couchbase.com>